--- a/hottest.html
+++ b/hottest.html
@@ -39,10 +39,10 @@
                     이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-trend">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-hottest now-on">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                 </ul>
               </div>
@@ -53,8 +53,8 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-sizeP">"베개"</strong>의 가장 핫한 포스트는<br><strong
-                    class="txt-sizeP">"유튜브"</strong>의 <strong class="txt-sizeP">"나랏말싸미 듕긕에
+                  검색하신 키워드 <strong class="txt-sizeP">"베개"</strong>의 가장 핫한 포스트는 <strong class="txt-sizeP">"유튜브"</strong>의
+                  <br><strong class="txt-sizeP">"나랏말싸미 듕긕에
                     달아 문자와로 서르 사맛디 문장 더 길게길게
                     아니할쎄"</strong>입니다.
                 </p>
@@ -75,7 +75,7 @@
                 <div class="article-hottest-wrap">
                   <ul class="hottest-list">
                     <li class="hottest-item item-title">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-none"></span>
                       <div class="contents-area">
                         <p class="item-name">카페명</p>
                         <span class="item-post-num">게시글 수</span>
@@ -83,7 +83,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-cafe-naver"></span>
                       <div class="contents-area">
                         <p class="item-name">베개 쓰는 사람들</p>
                         <span class="item-post-num">15,471</span>
@@ -91,7 +91,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-cafe-naver"></span>
                       <div class="contents-area">
                         <p class="item-name">피겨를 사랑하는 사람들</p>
                         <span class="item-post-num">15,221</span>
@@ -99,7 +99,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-cafe-naver"></span>
                       <div class="contents-area">
                         <p class="item-name">베개를 위하여</p>
                         <span class="item-post-num">12,117</span>
@@ -107,7 +107,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-cafe-naver"></span>
                       <div class="contents-area">
                         <p class="item-name">죽음을 먹는 자들</p>
                         <span class="item-post-num">10,227</span>
@@ -115,7 +115,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area"></span>
+                      <span class="icon-area icon-cafe-naver"></span>
                       <div class="contents-area">
                         <p class="item-name">맥 쓰는 사람들</p>
                         <span class="item-post-num">9,471</span>
@@ -123,6 +123,7 @@
                       </div>
                     </li>
                   </ul>
+                  <button class="list-more-btn">더 보기</button>
                 </div>
               </div>
             </div>
@@ -134,8 +135,58 @@
                 <h3 class="add-icon">HOTTEST BLOGERS</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap main-chart-wrap">
-
+                <div class="article-hottest-wrap">
+                  <ul class="hottest-list">
+                    <li class="hottest-item item-title">
+                      <span class="icon-area icon-none"></span>
+                      <div class="contents-area">
+                        <p class="item-name">블로거 ID</p>
+                        <span class="item-post-num">게시글 수</span>
+                        <span class="item-engagement">건수</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">magic***</p>
+                        <span class="item-post-num">15,471</span>
+                        <span class="item-engagement">15,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">opera********</p>
+                        <span class="item-post-num">15,221</span>
+                        <span class="item-engagement">15,221</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">showm***</p>
+                        <span class="item-post-num">12,117</span>
+                        <span class="item-engagement">12,117</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">power****</p>
+                        <span class="item-post-num">10,227</span>
+                        <span class="item-engagement">10,227</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black*****</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                  </ul>
+                  <button class="list-more-btn">더 보기</button>
                 </div>
               </div>
             </div>
@@ -147,8 +198,58 @@
                 <h3 class="add-icon">HOTTEST INFLUENCERS</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap main-chart-wrap">
-
+                <div class="article-hottest-wrap">
+                  <ul class="hottest-list">
+                    <li class="hottest-item item-title">
+                      <span class="icon-area icon-none"></span>
+                      <div class="contents-area">
+                        <p class="item-name">ID</p>
+                        <span class="item-post-num">게시글 수</span>
+                        <span class="item-engagement">건수</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-insta"></span>
+                      <div class="contents-area">
+                        <p class="item-name">magic*****</p>
+                        <span class="item-post-num">15,471</span>
+                        <span class="item-engagement">15,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">opera*******</p>
+                        <span class="item-post-num">15,221</span>
+                        <span class="item-engagement">15,221</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-insta"></span>
+                      <div class="contents-area">
+                        <p class="item-name">power*****</p>
+                        <span class="item-post-num">12,117</span>
+                        <span class="item-engagement">12,117</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-insta"></span>
+                      <div class="contents-area">
+                        <p class="item-name">showm***</p>
+                        <span class="item-post-num">10,227</span>
+                        <span class="item-engagement">10,227</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-twit"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                  </ul>
+                  <button class="list-more-btn">더 보기</button>
                 </div>
               </div>
             </div>
@@ -164,8 +265,144 @@
                 <h3 class="add-icon">HOTTEST POST TOP 10</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap -wrap">
-
+                <div class="article-hottest-wrap hottest-wide">
+                  <ul class="hottest-list hottest-wide-list">
+                    <li class="hottest-item item-title">
+                      <span class="icon-area icon-none"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">TITLE</p>
+                        <span class="item-date">DATE</span>
+                        <span class="item-id">NAME</span>
+                        <span class="item-comments">COMMENTS</span>
+                        <span class="item-views">VIEWS</span>
+                        <span class="item-likes">LIKES</span>
+                        <span class="item-shares">SHARES</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다 Lorem ipsum dolor sit amet consectetur
+                          adipisicing elit. Consequuntur sint delectus accusantium quaerat iure. Laboriosam omnis ab hic
+                          officiis unde eaque iusto natus earum dolor, nihil consequatur labore accusamus debitis!</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                  </ul>
+                  <button class="list-more-btn">더 보기</button>
                 </div>
               </div>
             </div>
