--- a/trend.html
+++ b/trend.html
@@ -39,10 +39,10 @@
                     이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-trend now-on">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-hottest">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                 </ul>
               </div>
@@ -70,8 +70,15 @@
                 <h3 class="add-icon">POST TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap main-chart-wrap">
+                <div class="article-chart-wrap">
+                  <div>
 
+                  </div>
+
+                  <div class="slide-btn-wrap">
+                    <button class="slide-btn slide-left"></button>
+                    <button class="slide-btn slide-right"></button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -87,8 +94,15 @@
                 <h3 class="add-icon">ENGAGEMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap -wrap">
+                <div class="article-chart-wrap">
+                  <div>
 
+                  </div>
+
+                  <div class="slide-btn-wrap">
+                    <button class="slide-btn slide-left"></button>
+                    <button class="slide-btn slide-right"></button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -104,8 +118,15 @@
                 <h3 class="add-icon">SENTIMENT TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap -wrap">
+                <div class="article-chart-wrap">
+                  <div>
 
+                  </div>
+
+                  <div class="slide-btn-wrap">
+                    <button class="slide-btn slide-left"></button>
+                    <button class="slide-btn slide-right"></button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -121,8 +142,297 @@
                 <h3 class="add-icon">KEYWORD TREND</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap -wrap">
-
+                <div class="article-rank-wrap">
+                  <div class="trend-rank-wrap">
+                    <div class="trend-rank-list">
+                      <h4>22년 3월 2주차</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-title">
+                          <p class="item-standing">순위</p>
+                          <span class="item-keyword">단어</span>
+                          <span class="item-num">건수</span>
+                          <span class="item-move">변동</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득</span>
+                          <span class="item-num">15,471</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                          <span class="item-num">15,221</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                          <span class="item-num">12,117</span>
+                          <span class="item-move up"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                          <span class="item-num">10,227</span>
+                          <span class="item-move down"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                          <span class="item-num">9,471</span>
+                          <span class="item-move down"><em></em>2</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                          <span class="item-num">8,626</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                          <span class="item-num">7,684</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                          <span class="item-num">6,228</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                          <span class="item-num">5,983</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                          <span class="item-num">4,115</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>22년 3월 3주차</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-title">
+                          <p class="item-standing">순위</p>
+                          <span class="item-keyword">단어</span>
+                          <span class="item-num">건수</span>
+                          <span class="item-move">변동</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득</span>
+                          <span class="item-num">15,471</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                          <span class="item-num">15,221</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                          <span class="item-num">12,117</span>
+                          <span class="item-move up"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                          <span class="item-num">10,227</span>
+                          <span class="item-move down"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                          <span class="item-num">9,471</span>
+                          <span class="item-move down"><em></em>2</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                          <span class="item-num">8,626</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                          <span class="item-num">7,684</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                          <span class="item-num">6,228</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                          <span class="item-num">5,983</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                          <span class="item-num">4,115</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>22년 3월 4주차</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-title">
+                          <p class="item-standing">순위</p>
+                          <span class="item-keyword">단어</span>
+                          <span class="item-num">건수</span>
+                          <span class="item-move">변동</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득</span>
+                          <span class="item-num">15,471</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                          <span class="item-num">15,221</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                          <span class="item-num">12,117</span>
+                          <span class="item-move up"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                          <span class="item-num">10,227</span>
+                          <span class="item-move down"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                          <span class="item-num">9,471</span>
+                          <span class="item-move down"><em></em>2</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                          <span class="item-num">8,626</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                          <span class="item-num">7,684</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                          <span class="item-num">6,228</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                          <span class="item-num">5,983</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                          <span class="item-num">4,115</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="trend-rank-list">
+                      <h4>22년 4월 1주차</h4>
+                      <ul class="rank-list">
+                        <li class="rank-item item-title">
+                          <p class="item-standing">순위</p>
+                          <span class="item-keyword">단어</span>
+                          <span class="item-num">건수</span>
+                          <span class="item-move">변동</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">1</p>
+                          <span class="item-keyword">소득</span>
+                          <span class="item-num">15,471</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">2</p>
+                          <span class="item-keyword">갈등</span>
+                          <span class="item-num">15,221</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">3</p>
+                          <span class="item-keyword">기본소득</span>
+                          <span class="item-num">12,117</span>
+                          <span class="item-move up"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">4</p>
+                          <span class="item-keyword">대선</span>
+                          <span class="item-num">10,227</span>
+                          <span class="item-move down"><em></em>1</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">5</p>
+                          <span class="item-keyword">공천</span>
+                          <span class="item-num">9,471</span>
+                          <span class="item-move down"><em></em>2</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">6</p>
+                          <span class="item-keyword">카카오</span>
+                          <span class="item-num">8,626</span>
+                          <span class="item-move new"><em></em>NEW</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">7</p>
+                          <span class="item-keyword">SKT</span>
+                          <span class="item-num">7,684</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">8</p>
+                          <span class="item-keyword">메타버스</span>
+                          <span class="item-num">6,228</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">9</p>
+                          <span class="item-keyword">디지털자산</span>
+                          <span class="item-num">5,983</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                        <li class="rank-item item-subs">
+                          <p class="item-standing">10</p>
+                          <span class="item-keyword">NFT</span>
+                          <span class="item-num">4,115</span>
+                          <span class="item-move none"><em></em>-</span>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="slide-btn-wrap">
+                    <button class="slide-btn slide-left"></button>
+                    <button class="slide-btn slide-right"></button>
+                  </div>
                 </div>
               </div>
             </div>
