--- a/now.html
+++ b/now.html
@@ -39,10 +39,10 @@
                     이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-trend">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                   <li class="tab-info-item tab-hottest">
-                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
                   </li>
                 </ul>
               </div>
@@ -53,7 +53,7 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트<br> <strong
+                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트 <strong
                     class="txt-num txt-highlight">30,000</strong> 건을 발견하였습니다.
                 </p>
               </div>
